# Manning-Four-Small-Algorithm-Projects-with-Rust

./: .gitignore  Cargo.toml
Dynamic-Programming/branch-and-bound/: Cargo.toml
Dynamic-Programming/branch-and-bound/src/: main.rs
Dynamic-Programming/dynamic-programming/: Cargo.toml
Dynamic-Programming/dynamic-programming/src/: main.rs
Dynamic-Programming/exhaustive-search/: Cargo.toml
Dynamic-Programming/exhaustive-search/src/: main.rs
Dynamic-Programming/rods-technique/: Cargo.toml
Dynamic-Programming/rods-technique/src/: main.rs
Problem-Solving-with-Recursion/dynamic-fibonacci/: Cargo.toml
Problem-Solving-with-Recursion/dynamic-fibonacci/src/: main.rs
Problem-Solving-with-Recursion/factorial/src/: main.rs
Problem-Solving-with-Recursion/fibonacci/: Cargo.toml
Problem-Solving-with-Recursion/knights-tour/: Cargo.toml
Problem-Solving-with-Recursion/n-queens-redux/: Cargo.toml
Problem-Solving-with-Recursion/tower-of-hanoi/: Cargo.toml
Public-Key-Cryptography/factoring-numbers/: Cargo.toml
Public-Key-Cryptography/fast-exponentiation/: Cargo.toml
Public-Key-Cryptography/gcd-and-lcm/: Cargo.toml
Public-Key-Cryptography/primality-testing/: Cargo.toml
Public-Key-Cryptography/rsa/: Cargo.toml
Sorting-and-Searching/binary-search/: Cargo.toml
Sorting-and-Searching/bubble-sort/: Cargo.toml
Sorting-and-Searching/counting-sort/: Cargo.toml
Sorting-and-Searching/linear-search/: Cargo.toml
Sorting-and-Searching/quicksort/: Cargo.toml
utilities/src/: check_sorted.rs  get_i32.rs  get_i64.rs  lib.rs  print_vec.rs  prng.rs  quicksort.rs
(+21 files in other folders)
