[workspace]
resolver = "2"

members = [
    "utilities",
    "Sorting-and-Searching/bubble-sort",
    "Sorting-and-Searching/counting-sort",
    "Sorting-and-Searching/linear-search",
    "Sorting-and-Searching/binary-search",
    "Sorting-and-Searching/quicksort",
    "Problem-Solving-with-Recursion/factorial",
    "Problem-Solving-with-Recursion/fibonacci",
    "Problem-Solving-with-Recursion/dynamic-fibonacci",
    "Problem-Solving-with-Recursion/knights-tour",
    "Problem-Solving-with-Recursion/n-queens",
    "Problem-Solving-with-Recursion/n-queens-redux",
    "Problem-Solving-with-Recursion/tower-of-hanoi",
]